--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body {
 }
 
 .description {
-    font-size: 0.9em;
+    font-size: 0.75em;
     width: 90%;
     color: var(--desaturated-blue);
     font-weight: 500;
@@ -69,7 +69,7 @@ body {
     background-color: #f8f9fe;
     padding: 15px 0;
     border-radius: 15px;
-    width: 100%;
+    width: 90%;
 }
 
 .plan-container {
@@ -83,7 +83,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 5px;
-    font-size: 0.9em;
+    font-size: 0.75em;
 }
 
 .plan {
@@ -98,7 +98,7 @@ body {
     color: var(--very-pale-blue);
     background-color: var(--bright-blue);
     font-weight: 900;
-    width: 100%;
+    width: 90%;
     height: 50px;
     border: 0;
     border-radius: 10px;
@@ -109,14 +109,14 @@ body {
 .link-cancel-order {
     text-decoration: none;
     font-weight: 900;
-    font-size: 0.9em;
+    font-size: 0.75em;
     color: var(--desaturated-blue);
+    margin: 15px;
 }
 
 .link-change:link {
     color: var(--bright-blue);
-    font-size: 0.9em;
-    font-weight: 900;
+    font-size: 0.69em;
 }
 
 .link-change:visited {
@@ -130,22 +130,18 @@ body {
 
 .link-cancel-order:link {
     color: var(--desaturated-blue);
-    font-weight: 900;
 }
 
 .link-cancel-order:visited {
     color: var(--desaturated-blue);
-    font-weight: 900;
 }
 
 .link-cancel-order:visited:hover {
     color: var(--dark-blue);
-    font-weight: 900;
 }
 
 .link-cancel-order:link:hover {
     color: var(--dark-blue);
-    font-weight: 900;
 }
 
 .link-change:visited:hover {
@@ -158,7 +154,11 @@ body {
         background-position: top center;
         height: 100vh;
         margin: 0;
-        font-size: 18px;
+        font-size: 21px;
+    }
+
+    .block-plan {
+        padding: 25px 0;
     }
 }
 
